--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg sticky-top bg-white navigation-clean">
-        <div class="container"><a class="navbar-brand" href="#"><img id="logo" src="assets/img/hpl.png"></a>
-            <div class="collapse navbar-collapse" id="navcol-1">
+    <nav class="navbar navbar-light navbar-expand-md sticky-top bg-white" src="assets/img/hpl.png">
+        <div class="container-fluid"><a class="navbar-brand" href="#"><img id="logo" src="assets/img/hpl.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#about-us">About Us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#testimonials">Testimonial</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#testimonials">Testimonials</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#pricing">Pricing</a></li>
                 </ul>
-            </div><a class="btn btn-primary ml-auto" role="button" href="#" style="background-color: rgb(51,125,234);border-color: rgb(251,251,251);border-radius: 50px;border: 2px solid #ffffff;">Hire Us</a></div>
+        </div>
+        </div>
     </nav>
     <header class="masthead text-white text-center" style="background:url('assets/img/back.png')center bottom no-repeat;background-size:cover;">
         <div class="overlay1"></div>
